Ajuste pagina experiencia con video final

--- a/experiencia.html
+++ b/experiencia.html
@@ -39,7 +39,7 @@
     </table>
 <h2>Experiencia:</h2>
 <video  id="laboral" controls poster="image/logo-hufesa.png" width="250px" height="250px">
- <source src="media/san-gil.mp4" type="">
+ <source src="media/Experiencia.mp4" type="">
 </video>
 <br><br><br>
 <h2>Hobbies:</h2>
